[gd_scene load_steps=13 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://StartScreen.gd" type="Script" id=2]
[ext_resource path="res://fotoFundo.png" type="Texture" id=3]

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_color = Color( 0.941176, 0.239216, 0.239216, 1 )
font_data = ExtResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.002
margin_right = 1.0
margin_bottom = -0.200073
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="FotoFundo" type="Sprite" parent="."]
position = Vector2( 403, 329 )
scale = Vector2( 0.64709, 0.78453 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="FotoFundo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -945.0
margin_top = -452.5
margin_right = -945.0
margin_bottom = -452.5
color = Color( 0.054902, 0.054902, 0.054902, 0.286275 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -44.5
margin_right = 108.0
margin_bottom = 44.5

[node name="startBtn" type="Button" parent="controls"]
margin_right = 216.0
margin_bottom = 27.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.407843, 0.407843, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.282353, 0.282353, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Start"

[node name="controlsBtn" type="Button" parent="controls"]
margin_top = 31.0
margin_right = 216.0
margin_bottom = 58.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.407843, 0.407843, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.282353, 0.282353, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Controls"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 62.0
margin_right = 216.0
margin_bottom = 89.0
focus_neighbour_bottom = NodePath("../startBtn")
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.407843, 0.407843, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.282353, 0.282353, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -191.0
margin_right = 246.0
margin_bottom = -114.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "HAPPY FARM"

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/controlsBtn" to="." method="_on_controlsBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
